# sulci-oss

./: CHANGELOG.md  LICENSE  LOCAL_SETUP.md  NOTICE  README.md  pyproject.toml
.github/workflows/: benchmark.yml  publish.yml  tests.yml
benchmark/: .gitignore  README.md  run.py
examples/: anthropic_example.py  context_aware.py  context_aware_example.py
sulci/: __init__.py  context.py  core.py
sulci/backends/: __init__.py  chroma.py  cloud.py  faiss.py  milvus.py  qdrant.py  redis.py  sqlite.py
sulci/embeddings/: __init__.py  minilm.py  openai.py
tests/: test_backends.py  test_cloud_backend.py  test_connect.py  test_context.py  test_core.py
