[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "sulci"
version         = "0.1.1"
description     = "Semantic caching for LLM apps — stop paying for the same answer twice"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.9"
keywords        = [
    "semantic-cache", "llm", "ai", "anthropic", "openai",
    "vector-search", "langchain", "cost-optimization", "cache", "rag"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# No mandatory deps — install only what you need
dependencies = []

[project.optional-dependencies]
chroma  = ["chromadb>=0.4.0",     "sentence-transformers>=2.2.0"]
qdrant  = ["qdrant-client>=1.7.0","sentence-transformers>=2.2.0"]
faiss   = ["faiss-cpu>=1.7.4",    "sentence-transformers>=2.2.0"]
redis   = ["redis>=5.0.0",        "redisvl>=0.1.0", "sentence-transformers>=2.2.0"]
sqlite  = ["sentence-transformers>=2.2.0"]
milvus  = ["pymilvus>=2.3.0",     "sentence-transformers>=2.2.0"]
openai  = ["openai>=1.0.0"]
all     = [
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
    "faiss-cpu>=1.7.4",
    "redis>=5.0.0",
    "redisvl>=0.1.0",
    "pymilvus>=2.3.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
]
dev = ["pytest>=7.0", "pytest-cov", "build", "twine"]

[project.urls]
Homepage      = "https://sulci.dev"
Repository    = "https://github.com/id4git/semanticache"
Documentation = "https://github.com/id4git/semanticache#readme"
"Bug Tracker" = "https://github.com/id4git/semanticache/issues"

[tool.setuptools.packages.find]
where   = ["."]        # look in the repo root (sulci/)
include = ["sulci*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
